--- a/libft/Makefile
+++ b/libft/Makefile
@@ -39,6 +39,12 @@ SRC = ft_atoi.c \
 		ft_putstr_fd.c \
 		ft_putendl_fd.c \
 		ft_putchar_fd.c \
+		ft_printf.c \
+        ft_putstr.c \
+        ft_putnbr.c \
+		ft_puthex.c \
+        ft_putchar.c \
+        ft_putaddr.c \
 
 B_SRC = ft_lstnew.c \
 		ft_lstmap.c \
